# ai-workbench-lib

./: Cargo.toml  LICENSE  README.md
modules/: file_discovery.rs  job_processor.rs  mod.rs  model_runner.rs
modules/file_splitter/: README.md  mod.rs  splitter.rs  tests.rs  types.rs
modules/file_splitter/splitter_types/: code_splitter.rs  csv_splitter.rs  json_splitter.rs  mod.rs  text_splitter.rs
modules/job_processor/: core.rs  markdown.rs  mod.rs  types.rs
src/: lib.rs  main.rs
