[package]
name = "ai-workbench-lib"
version = "0.3.0"
edition = "2021"
description = "AI Workbench library for file processing, splitting, and model interactions"
authors = ["AIWorkbench Team"]
license = "MIT"
repository = "https://github.com/PartTimer1996/ai-workbench-lib"
homepage = "https://github.com/PartTimer1996/ai-workbench-lib"
documentation = "https://docs.rs/ai-workbench-lib"
readme = "README.md"
keywords = ["ai", "aws", "bedrock", "file-processing", "s3"]
categories = ["api-bindings", "text-processing", "web-programming"]

[lib]
name = "ai_workbench_lib"
path = "src/lib.rs"

[[bin]]
name = "ai-workbench-example"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1.1"
aws-sdk-s3 = "1.17"
aws-sdk-bedrockruntime = "1.17"
bytes = "1.5"
csv = "1.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
markdown = "1.0"
